# ibis-gizmosql

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ibis_gizmosql/: __init__.py
tests/: conftest.py  test_aggregation.py  test_api.py  test_array.py  test_binary.py  test_client.py  test_column.py  test_conditionals.py  test_dot_sql.py  test_export.py  test_generic.py  test_impure.py  test_interactive.py  test_join.py  test_json.py  test_local_ingest.py  test_map.py  test_numeric.py  test_param.py  test_set_ops.py  test_sql.py  test_string.py  test_struct.py  test_temporal.py  test_uuid.py  test_window.py
tests/snapshots/test_sql/test_many_subqueries/: out.sql
